Fixed spacing in the project cards.

--- a/src/App.css
+++ b/src/App.css
@@ -95,11 +95,11 @@
 }
 
 .card-project .card-content {
-  @apply p-8 pt-0 space-y-4 flex-1 flex flex-col justify-end;
+  @apply p-4 pt-0 md:p-8 md:pt-0 space-y-4 flex-1 flex flex-col justify-end;
 }
 
 .technologies {
-  @apply flex flex-wrap gap-2 items-center py-4;
+  @apply flex flex-wrap gap-2 items-center py-4 pt-0;
 }
 
 .tech {
